--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>BootStrapLab</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="">
@@ -263,9 +263,9 @@
           <!-- Facebook -->
           <a
              class="btn btn-outline-light btn-floating m-1"
-             href="#!"
+             href=""
              role="button"
-             ><i class="fab fa-facebook-f"></i
+             ><i class="fa fa-facebook"></i
             ></a>
   
           <!-- Twitter -->
@@ -273,7 +273,7 @@
              class="btn btn-outline-light btn-floating m-1"
              href="#!"
              role="button"
-             ><i class="fab fa-twitter"></i
+             ><i class="fa fa-twitter"></i
             ></a>
   
           <!-- Google -->
@@ -281,7 +281,7 @@
              class="btn btn-outline-light btn-floating m-1"
              href="#!"
              role="button"
-             ><i class="fab fa-google"></i
+             ><i class="fa fa-google"></i
             ></a>
   
           <!-- Instagram -->
@@ -289,7 +289,7 @@
              class="btn btn-outline-light btn-floating m-1"
              href="#!"
              role="button"
-             ><i class="fab fa-instagram"></i
+             ><i class="fa fa-instagram"></i
             ></a>
   
           <!-- Linkedin -->
@@ -297,7 +297,7 @@
              class="btn btn-outline-light btn-floating m-1"
              href="#!"
              role="button"
-             ><i class="fab fa-linkedin-in"></i
+             ><i class="fa fa-linkedin-in"></i
             ></a>
   
           <!-- Github -->
@@ -305,7 +305,7 @@
              class="btn btn-outline-light btn-floating m-1"
              href="#!"
              role="button"
-             ><i class="fab fa-github"></i
+             ><i class="fa fa-github"></i
             ></a>
         </section>
         <!-- Section: Social media -->
@@ -318,7 +318,7 @@
            style="background-color: rgba(0, 0, 0, 0.2)"
            >
         © 2020 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/"
+        <a class="text-white" href="https://mdbootstrap.com"
            >MDBootstrap.com</a
           >
       </div>
